<resources>
    <string name="app_name">保健食品问卷</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_title">保健食品调查问卷</string>
    <string name="personal_ask_use_label">您是否使用过保健食品?</string>
    <string name="personal_ask_use_label1">过去三个月里，您是否食用过保健食品?</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="back_label">返回</string>
    <string name="not_requirement_content">由于您未使用任何保健食品，暂不能参加本次问卷活动。</string>
    <string name="next_step">下一步</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="add_attachment">请添加附件：</string>
    <string name="add_label">添加</string>
    <string name="please_input_phonenumber">请输入手机号</string>
    <string name="please_input_right_phonenumber">请输入正确手机号</string>
    <string name="please_input_idcard">请输入身份证</string>
    <string name="please_input_right_idcard">请输入正确的身份证</string>
    <string name="please_input_content">请输入内容</string>
    <string name="please_input_x_content">请回答%s</string>
    <string name="please_select_calendar">请选择日期</string>
    <string name="get_sms_code_failure">获取验证码失败</string>
    <string name="get_sms_code_success">验证码已发至您的手机</string>
    <string name="please_select_option">请作出选择</string>
    <string name="please_input_mechanism_code">请输入机构代码：</string>
    <string name="confrim">确定</string>
    <string name="check_mechanism_code_fail">机构验证失败</string>
    <string name="timer_label">%ds</string>
    <string name="login_fail">录入失败</string>
    <string name="please_input_sms_code">请输入验证码</string>
    <string name="please_input_right_sms_code">请输入正确的验证码</string>
    <string name="no_fill">未填写</string>
    <string name="save">保存</string>
    <string name="default_date">_年_月_日</string>
    <string name="default_address">_省_市_县</string>
    <string name="input_date">%1$d年%2$s月%3$s日</string>
    <string name="eat_front">食用前</string>
    <string name="eat_end">食用后</string>
    <string name="save_fail">保存失败</string>
    <string name="nouse_title">停用原因</string>
    <string name="goon_reply">继续回答</string>
    <string name="finish">结束</string>
    <string name="goon_dailog_content">是否继续回答其他保健食品</string>
    <string name="fill">已填写</string>
    <string name="please_input_other_reason">请输入</string>
    <string name="back_home">返回首页</string>
    <string name="thanks">感谢您对本次问卷的参与和帮助！</string>
    <string name="survey_finish_title">问卷全部作答完毕</string>
    <string name="save_success">保存成功</string>
    <string name="cancel">取消</string>
    <string name="ablum">相册</string>
    <string name="camera">相机</string>
    <string name="max_upload_pic_count">最多上传9张图片</string>
    <string name="loading">加载中...</string>
    <string name="frize_content">感谢您对于本次问卷的参与和帮助</string>
    <string name="continue_reply">继续问卷</string>
    <string name="click_prize">点击领奖</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failure">上传失败</string>
    <string name="upgradel">更新</string>
    <string name="price_unreasonable">价格不合理</string>
    <string name="no_enough_effect">效果不明显</string>
    <string name="bad_usage_habit">服用方式不习惯</string>
    <string name="outsite_sales">上门销售</string>
    <string name="other">其他</string>
    <string name="advice_fill">推荐填写</string>
</resources>
