<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/tool_bar" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/end_thanks_illustrations"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/survey_finish_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="60dp"
                android:text="@string/thanks"/>

        </LinearLayout>
        <Button
            android:id="@+id/goHomeButton"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/back_home"
            android:layout_gravity="center_horizontal|bottom"/>
    </FrameLayout>


</LinearLayout>