<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            android:src="@mipmap/thanks_illustrations" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:text="@string/frize_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/yestv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/continue_reply"
                android:textSize="18sp"
                android:textColor="@color/titlecolor"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/rect_button_shap1"/>
            <TextView
                android:id="@+id/notv"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/click_prize"
                android:textSize="18sp"
                android:textColor="@color/titlecolor"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/rect_button_shap1"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>